# dta

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  precommit-check.ps1  profile.ps1  profile.sh
.github/workflows/: rust.yml
benches/: roundtrip.rs
examples/: profile.rs  profile_report.rs
src/: lib.rs
src/stata/: missing_value.rs  mod.rs  not_missing_value_error.rs  stata_byte.rs  stata_double.rs  stata_error.rs  stata_float.rs  stata_int.rs  stata_long.rs  stata_timestamp.rs
src/stata/dct/: async_dct_reader.rs  async_parser.rs  column.rs  column_anchor.rs  dct_error.rs  dct_reader.rs  dct_reader_options.rs  dct_reader_state.rs  dct_source.rs  dct_source_options.rs  dct_source_state.rs  dct_warning.rs  input_format.rs  lazy_record.rs  line_ending.rs  mod.rs  numeric_style.rs  parser.rs  record.rs  schema.rs  value.rs  variable_type.rs
src/stata/dta/: async_characteristic_reader.rs  async_characteristic_writer.rs  async_header_reader.rs  async_header_writer.rs  async_long_string_reader.rs  async_long_string_writer.rs  async_reader_state.rs  async_record_reader.rs  async_record_writer.rs  async_schema_reader.rs  async_schema_writer.rs  async_value_label_reader.rs  async_value_label_writer.rs  async_writer_state.rs  buffered_seek.rs  byte_order.rs  characteristic.rs  characteristic_format.rs  characteristic_parse.rs  characteristic_reader.rs  characteristic_writer.rs  dta_error.rs  dta_reader.rs  dta_reader_options.rs  dta_writer.rs  header.rs  header_format.rs  header_parse.rs  header_reader.rs  header_writer.rs  lazy_record.rs  long_string.rs  long_string_format.rs  long_string_parse.rs  long_string_reader.rs  long_string_ref.rs  long_string_table.rs  long_string_writer.rs  mod.rs  reader_state.rs  (+24 more)
src/stata/temporal/: chrono_adapter.rs  conversion.rs  kind.rs  mod.rs
tests/: read_2002_fem_preg.rs  read_auto.rs  read_medical.rs  read_v104_missings.rs  temporal_roundtrip.rs
